# tauri-svelte-xterm

./: README.md  package-lock.json  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: font.rs  main.rs  terminal.rs
src/lib/: CustomCanvasRenderer.svelte  XtermRenderer.svelte
